Added README.md Tweaked some values in the post process effects Small modifications in the code that don't really have impact Moved and added defines in Utils.h.

--- a/LittleRayTracer.vcxproj
+++ b/LittleRayTracer.vcxproj
@@ -179,6 +179,9 @@
     <ClCompile Include="PostProcessEffect.cpp" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
