--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.h linguist-language=Cpp
+*.h linguist-language=C++
 *.c linguist-language=C
 *.hpp linguist-language=C++
 *.cpp linguist-language=C++
